fix: break long words on overflow

--- a/src/core/styles/base.css
+++ b/src/core/styles/base.css
@@ -204,3 +204,13 @@ fieldset {
   white-space: nowrap;
   width: 1px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  overflow-wrap: break-word;
+}
